Crash on baking path particles when mesh don't have any faces #103559

Closed
opened 2022-12-30 15:05:14 +01:00 by Sean Li · 11 comments

System Information
Operating system: macOS 13.0
Graphics card: Apple M2
Machine: Y4QVXL9FGW, MacBook Pro, Apple M2, 24GB

Blender Version
Broken: 3.4, 2.83
Worked: never

Short description of error
When baking path particle it crashed when mesh don't have any faces. The crash report has been attached. Seems like a segfault.

Exact steps for others to reproduce the error

Stack trace:
blender.exe         :0x00007FF649C60B80  particle_calculate_parent_uvs C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:316
blender.exe         :0x00007FF649C60CA0  particle_calculate_uvs C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:445
blender.exe         :0x00007FF649C5EBC0  particle_batch_cache_ensure_procedural_strand_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:982
blender.exe         :0x00007FF649C60F00  particles_ensure_procedural_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:1718
blender.exe         :0x00007FF649C87270  drw_hair_particle_cache_get C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_hair.cc:179
blender.exe         :0x00007FF649C87CB0  DRW_shgroup_hair_create_sub C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_hair.cc:248
blender.exe         :0x00007FF649C74840  workbench_cache_populate C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\engines\workbench\workbench_engine.c:383
blender.exe         :0x00007FF649C2A730  drw_engines_cache_populate C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1079
blender.exe         :0x00007FF649C26E80  DRW_draw_render_loop_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1722
blender.exe         :0x00007FF649C282E0  DRW_draw_view C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1635
blender.exe         :0x00007FF64A43FD90  view3d_main_region_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_draw.cc:1587
blender.exe         :0x00007FF6497AA4D0  ED_region_do_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:551
blender.exe         :0x00007FF649790B00  wm_draw_window_offscreen C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:960
blender.exe         :0x00007FF649790960  wm_draw_window C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1127
blender.exe         :0x00007FF6497903E0  wm_draw_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1385
blender.exe         :0x00007FF649769D20  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:647
blender.exe         :0x00007FF649765320  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:590
blender.exe         :0x00007FF64A9116D4  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFA37D75590  BaseThreadInitThunk
ntdll.dll           :0x00007FFA38E04830  RtlUserThreadStart```
**System Information** Operating system: macOS 13.0 Graphics card: Apple M2 Machine: Y4QVXL9FGW, MacBook Pro, Apple M2, 24GB **Blender Version** Broken: 3.4, 2.83 Worked: never **Short description of error** When baking path particle it crashed when mesh don't have any faces. The crash report has been attached. Seems like a segfault. **Exact steps for others to reproduce the error** - Open attached file - Hit Bake [Main-2.blend](https://archive.blender.org/developer/F14100630/Main-2.blend) [#103559-simplified.blend](https://archive.blender.org/developer/F14109655/T103559-simplified.blend) ```lines=10 Stack trace: blender.exe :0x00007FF649C60B80 particle_calculate_parent_uvs C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:316 blender.exe :0x00007FF649C60CA0 particle_calculate_uvs C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:445 blender.exe :0x00007FF649C5EBC0 particle_batch_cache_ensure_procedural_strand_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:982 blender.exe :0x00007FF649C60F00 particles_ensure_procedural_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_particles.c:1718 blender.exe :0x00007FF649C87270 drw_hair_particle_cache_get C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_hair.cc:179 blender.exe :0x00007FF649C87CB0 DRW_shgroup_hair_create_sub C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_hair.cc:248 blender.exe :0x00007FF649C74840 workbench_cache_populate C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\engines\workbench\workbench_engine.c:383 blender.exe :0x00007FF649C2A730 drw_engines_cache_populate C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1079 blender.exe :0x00007FF649C26E80 DRW_draw_render_loop_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1722 blender.exe :0x00007FF649C282E0 DRW_draw_view C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1635 blender.exe :0x00007FF64A43FD90 view3d_main_region_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_draw.cc:1587 blender.exe :0x00007FF6497AA4D0 ED_region_do_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:551 blender.exe :0x00007FF649790B00 wm_draw_window_offscreen C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:960 blender.exe :0x00007FF649790960 wm_draw_window C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1127 blender.exe :0x00007FF6497903E0 wm_draw_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1385 blender.exe :0x00007FF649769D20 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:647 blender.exe :0x00007FF649765320 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:590 blender.exe :0x00007FF64A9116D4 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFA37D75590 BaseThreadInitThunk ntdll.dll :0x00007FFA38E04830 RtlUserThreadStart```
Author

Added subscriber: @Makabaka1880

Added subscriber: @Makabaka1880
Pratik Borhade changed title from Crash on Apple Silicon device when baking to Crash when baking particles 2023-01-03 06:24:44 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Crash triggers when object has zero faces. In code, it occurred due to null pointer access mface->v4
I guess fix will be a simple if check.

Crash triggers when object has zero faces. In code, it occurred due to null pointer access `mface->v4` I guess fix will be a simple `if` check.
Pratik Borhade changed title from Crash when baking particles to Crash when baking path particles 2023-01-03 06:52:05 +01:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

do not know if the bugs from the list of first fixes are still being processed and fixed. If not, was it correct to include a crash in this list?

do not know if the bugs from the list of first fixes are still being processed and fixed. If not, was it correct to include a crash in this list?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Good point. But this is still open for everyone. :)

@lichtwerk , what do you think?

Good point. But this is still open for everyone. :) @lichtwerk , what do you think?
Member

In #103559#1469369, @mod_moder wrote:
do not know if the bugs from the list of first fixes are still being processed and fixed. If not, was it correct to include a crash in this list?

Not sure which "list" or "list of first fixes" this relates to?

In #103559#1469453, @PratikPB2123 wrote:
Good point. But this is still open for everyone. :)

Also not sure what exactly this should mean?

In my opinion this is a legit bug, but one in a part of blender (the old particle system -- which is "End of Life") which is unlikely to see fixes from blender devs, any contributed patches are of course welcome.
As triagers, we can just confirm this, it is up to the #nodes_physics team to close this (or lower priority / mark as Known Issue).

> In #103559#1469369, @mod_moder wrote: > do not know if the bugs from the list of first fixes are still being processed and fixed. If not, was it correct to include a crash in this list? Not sure which "list" or "list of first fixes" this relates to? > In #103559#1469453, @PratikPB2123 wrote: > Good point. But this is still open for everyone. :) Also not sure what exactly this should mean? In my opinion this is a legit bug, but one in a part of blender (the old particle system -- which is "End of Life") which is unlikely to see fixes from blender devs, any contributed patches are of course welcome. As triagers, we can just confirm this, it is up to the #nodes_physics team to close this (or lower priority / mark as `Known Issue`).
Sibo Van Gool self-assigned this 2023-01-08 16:20:47 +01:00
Pratik Borhade changed title from Crash when baking path particles to Crash on baking path particles when mesh don't have any faces 2023-01-09 07:14:02 +01:00

This issue was referenced by b038662887

This issue was referenced by b03866288728823d74352ba2ba91ade8d08e1d2e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103559
No description provided.