source/blender/draw/intern/draw_cache_impl_particles.c
@@ -311,6 +311,11 @@ static void particle_calculate_parent_uvs(ParticleSystem *psys,
   }
   if (!ELEM(num, DMCACHE_NOTFOUND, DMCACHE_ISCHILD)) {
     const MFace *mfaces = CustomData_get_layer(&psmd->mesh_final->fdata, CD_MFACE);
+    if (UNLIKELY(mfaces == NULL)) {
+      BLI_assert_msg(psmd->mesh_final->totpoly == 0,
+                     "A mesh with polygons should always have a generated 'CD_MFACE' layer!");
+      return;
+    }
     const MFace *mface = &mfaces[num];
     for (int j = 0; j < num_uv_layers; j++) {
       psys_interpolate_uvs(mtfaces[j] + num, mface->v4, particle->fuv, r_uv[j]);
@@ -341,6 +346,11 @@ static void particle_calculate_parent_mcol(ParticleSystem *psys,
   }
   if (!ELEM(num, DMCACHE_NOTFOUND, DMCACHE_ISCHILD)) {
     const MFace *mfaces = CustomData_get_layer(&psmd->mesh_final->fdata, CD_MFACE);
+    if (UNLIKELY(mfaces == NULL)) {
+      BLI_assert_msg(psmd->mesh_final->totpoly == 0,
+                     "A mesh with polygons should always have a generated 'CD_MFACE' layer!");
+      return;
+    }
     const MFace *mface = &mfaces[num];
     for (int j = 0; j < num_col_layers; j++) {
       /* CustomDataLayer CD_MCOL has 4 structs per face. */
